feat: Application made to run in a Java 9+ and Dockerizeable. See the edited README.md about sbt usage.